@@ -1,0 +1,6 @@
+sub doit(n as ulong)
+  dim i as ulong
+  for i = n to 0 step -1
+    output(i) = 1
+  next i
+end sub
